# spinners

./: .gitignore  Cargo.toml  LICENSE  README.md  aliases.js  search-index.js  settings.html  source-files.js  update_spinners.sh
examples/: color.rs  complex_spinner.rs  cycle.rs  fail.rs  info.rs  on_drop.rs  simple.rs  stop_persist.rs  stop_symbol.rs  succeed.rs  timer.rs  unknown.rs  warning.rs
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/core/str/: trait.FromStr.js
implementors/lazy_static/: trait.LazyStatic.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/strum/: trait.IntoEnumIterator.js
spinners/: all.html  enum.Spinners.html  index.html  sidebar-items.js  struct.RawSpinners.html  struct.Spinner.html
spinners/spinner_names/: enum.SpinnerNames.html
spinners/spinners_data/: struct.SPINNERS.html
src/: lib.rs  spinner_data.rs  spinner_names.rs  spinners_data.rs
src/spinners/: lib.rs.html  spinner_data.rs.html  spinner_names.rs.html  spinners_data.rs.html
src/utils/: color.rs  mod.rs  spinner_data.rs  spinner_names.rs  spinners_data.rs  stream.rs
