[package]
name = "spinners-rs"
version = "1.2.1"
edition = "2021"
authors = ["jamesinaxx","François-Guillaume RIBREAU <github@fgribreau.com>"]
homepage = "https://github.com/jamesinaxx/spinners-rs"
repository = "https://github.com/jamesinaxx/spinners-rs"
readme = "README.md"
documentation = "https://docs.rs/spinners-rs"
description = "🛎 60+ Elegant terminal spinners for Rust"
keywords = ["spinner", "spin", "loader", "term", "terminal"]
categories = ["command-line-interface"]
license = "MIT"
include = ["src/**/*", "README.md"]

[dependencies]
lazy_static = { version = "1.4.0" }
maplit = { version = "1.0.2" }
strum = { version = "0.23.0", features = ["derive"] }